--- a/debian/control
+++ b/debian/control
@@ -11,6 +11,7 @@ Build-Depends: cmake,
                libkf5config-dev,
                libkdecorations2-dev,
                libkf5coreaddons-dev,
+               libqt5opengl5-dev,
                qtbase5-dev,
                qtbase5-private-dev,
                qtdeclarative5-dev,
