--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,4 +18,5 @@ install(FILES config/kwinrulesrc DESTINATION /etc/xdg)
 install(DIRECTORY scripts/cutefishlauncher DESTINATION /usr/share/kwin/scripts)
 install(DIRECTORY scripts/cutefish_squash DESTINATION /usr/share/kwin/effects)
 install(DIRECTORY scripts/cutefish_scale DESTINATION /usr/share/kwin/effects)
+install(DIRECTORY scripts/cutefish_popups DESTINATION /usr/share/kwin/effects)
 install(DIRECTORY tabbox/cutefish_thumbnail DESTINATION /usr/share/kwin/tabbox)
