--- a/debian/control
+++ b/debian/control
@@ -12,6 +12,7 @@ Build-Depends: cmake,
                libkdecorations2-dev,
                libkf5coreaddons-dev,
                libqt5opengl5-dev,
+               libqt5x11extras5-dev,
                qtbase5-dev,
                qtbase5-private-dev,
                qtdeclarative5-dev,
