--- a/debian/control
+++ b/debian/control
@@ -6,6 +6,8 @@ Build-Depends: cmake,
                debhelper (>= 9),
                extra-cmake-modules,
                kwin-dev,
+               libxcb-util-dev,
+               libxcb-util0-dev,
                libkf5windowsystem-dev,
                libkf5globalaccel-dev,
                libkf5config-dev,
