--- a/debian/control
+++ b/debian/control
@@ -22,7 +22,7 @@ Build-Depends: cmake,
                qttools5-dev,
                qttools5-dev-tools
 Standards-Version: 4.5.0
-Homepage: https://github.com/cutefishos/terminal
+Homepage: https://cutefishos.com
 
 Package: cutefish-kwin-plugins
 Architecture: any
